--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,1 +1,5 @@
-<p>todo-item works!</p>
+<div class="todo-item" *ngIf="item">
+    <span [class.completed]="item.completed">{{ item.title }}</span>
+    <button (click)="deleteItem()">Delete</button>
+  </div>
+  
