--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,6 +1,30 @@
 <div class="todo-list">
+  <div class="filter-dropdown">
+    <label for="filter">Filter Tasks:</label>
+    <select id="filter" [(ngModel)]="selectedFilter" (change)="filterTasks()">
+      <option value="today">Today</option>
+      <option value="week">Pending Tasks of this week</option>
+      <option value="month">Pending Tasks of this month</option>
+      <option value="all">All tasks</option>
+    </select>
+  </div>
+
+
+
+<div class="todo-list">
   <input #newTodo type="text" placeholder="Add a new task" [(ngModel)]="newItem">
-  <div>Due Date: <input type="date" [(ngModel)]="newDueDate"></div>  
+  <div class="form-group">
+    <div>Due Date: <input type="date" [(ngModel)]="newDueDate"></div>
+    <div class="priority-select">
+      Priority:
+      <select [(ngModel)]="newPriority">
+        <option value="low">Low</option>
+        <option value="medium">Medium</option>
+        <option value="high">High</option>
+      </select>
+    </div>
+  </div> 
+  
   <button class="addbutton" (click)="addTodoItem()">Add</button>
   <div *ngFor="let item of todoItems" class="todo-item">
     <input type="checkbox" [checked]="item.completed" (change)="toggleTodoItemCompletion(item)">
