--- a/src/app/components/todo-list/todo-list.component.css
+++ b/src/app/components/todo-list/todo-list.component.css
@@ -145,3 +145,43 @@
   border-radius: 4px;
   /* background-color: red; */
 }
+
+/* dashboard.component.css */
+.dashboard {
+  margin-top: 70px;
+  background: linear-gradient(135deg, #4CAF50, #81C784);
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+  color: #fff;
+  text-align: center;
+}
+
+.dashboard h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2em;
+  margin-bottom: 20px;
+}
+
+.stats {
+  display: flex;
+  justify-content: space-around;
+}
+
+.stat {
+  background: rgba(255, 255, 255, 0.2);
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  width: 30%;
+}
+
+.stat h3 {
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
+.stat p {
+  font-size: 1.2em;
+  margin: 0;
+}
